--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 asgiref==3.6.0
 Django==4.2
 djangorestframework==3.14.0
-gunicorn==22.0.0
 packaging==24.1
-psycopg==3.2.1
-psycopg-binary==3.2.1
-psycopg-pool==3.2.2
+psycopg==3.2.6
+psycopg-binary==3.2.6
+psycopg-pool==3.2.6
+python-dotenv==1.1.0
 pytz==2023.3
 sqlparse==0.4.3
 typing_extensions==4.12.2
